<resources>
    <string name="app_name">Indtoruce to You : BUSAN</string>
    <string name="title">Travel to Busan</string>
    <string name="first">Shopping Area</string>
    <string name="second">Beautiful Beach</string>
    <string name="third">Historical Area</string>
    <string name="fourth">Park / Nature</string>
    <string name="area">PLACE  :  </string>
    <string name="address">ADDRESS  :  </string>
    <string name="area_input">PLACE INPUT</string>
    <string name="address_input">ADDRESS INPUT</string>
    <string name="explain">Explain  :  </string>
    <string name="explain_input">Explain INPUT</string>
    <string name="shopping_area">Shopping Area</string>
    <string name="beautiful_beach">Beautiful Beach</string>
    <string name="historical_area">Historical Area</string>
    <string name="parkandnautre">Park and Nature</string>
    <string name="tab1">Shop</string>
    <string name="tab2">Beach</string>
    <string name="tab3">History</string>
    <string name="tab4">Park</string>
    <string name="haewoondae">haewoondae</string>
    <string name="gwangalli">Gwangalli</string>
    <string name="beachadress1">해운대구 우동</string>
    <string name="beachadress2">수영구 광안해변로</string>
    <string name="beachexplain1">This is very famous Beach in korea. Every year many visitors want to go there and take it healing.</string>
    <string name="beachexplain2">We can sea pretty and beautiful sight seeing while in beach at night. Come with Us</string>
    <string name="gamcheon">haewoondae</string>
    <string name="gukje">Gwangalli</string>
    <string name="historyadress1">사하구 감내2로</string>
    <string name="historyadress2">중구 신창동4가</string>
    <string name="historyexplain1">Before now, The sad history of koreans town was changed to attraction. visit and watching our story.</string>
    <string name="historyexplain2">Many people know as movie that contains major koreans life. go to there and take it smell.</string>
    <string name="igidae">Igidae</string>
    <string name="taejongdae">Taejongdae</string>
    <string name="parkadress1">남구 용호동</string>
    <string name="parkadress2">영도구 전망로</string>
    <string name="parkexplain1">Do you want to feel like wind blowing of sea? oK, lets go.</string>
    <string name="parkexplain2">Amazing sight of sea in taejongdae. why dont you go there?</string>
    <string name="ekea">Ekea</string>
    <string name="lottetoulet">Lottet oulet</string>
    <string name="shoppingadress1">기장읍 동부산관광</string>
    <string name="shoppingadress2">기장읍 기장해안로</string>
    <string name="shoppingexplain1">big, famous, convenient store for social life.</string>
    <string name="shoppingexplain2">Amazing sight of sea in taejongdae. why dont you go there?</string>
</resources>